--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "Abhradip Paul",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.0",
-    "nodemon": "^3.1.0"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "streamifier": "^0.1.1"
   }
 }
