--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abhradip Paul",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
