--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0",
-    "streamifier": "^0.1.1"
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
